--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -177,7 +177,8 @@
                 return;
             }
 
-            taskIds.forEach(task => {
+            taskIds.forEach(taskId => {
+                const task = currentTasks[taskId]; // Get the actual task object
                 const listItem = document.createElement('li');
                 listItem.className = 'px-4 py-2 hover:bg-gray-50 border-b border-gray-100 last:border-b-0';
                 let actionsHtml = '';
